--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,21 +1,21 @@
 @import './reset.css';
 
-:root{
-    --black: #393939;
-    --white: #FFFFFF;
-    --blue-light: #F3F6FD;
-    --blue-medium: #B8B8FF;
-    --blue: #5051F9;
- }
+:root {
+  --black: #393939;
+  --white: #ffffff;
+  --blue-light: #f3f6fd;
+  --blue-medium: #b8b8ff;
+  --blue: #5051f9;
+}
 
 * {
-    color: var(--black);
-    font-size: 18px;
-    font-weight: 400;
-    font-family: 'Roboto', sans-serif;  
- }
+  color: var(--black);
+  font-size: 18px;
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+}
 
- .container{ 
-   max-width: 1260px;
-   margin: 0 auto;
- } 
+.container {
+  max-width: 1260px;
+  margin: 0 auto;
+}
