--- a/src/pages/ultimateReact/items/pizzaProject/styles.module.scss
+++ b/src/pages/ultimateReact/items/pizzaProject/styles.module.scss
@@ -36,15 +36,16 @@
       right: 300px;
     }
   }
-  p {
+  &__text {
     font-size: 30px;
     font-weight: 600;
     width: 1068px;
     margin: auto;
     text-align: center;
-  }
-  &__lastChild {
-    padding-top: 33px;
+
+    &_lastChild {
+      margin-top: 33px;
+    }
   }
   button {
     width: 250px;
@@ -58,15 +59,40 @@
   }
 }
 
-.card{
-  &__item{
-    &_img{
+.card {
+  width: 400px;
+  margin-top: 35px;
+  margin-left: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  gap: 40px;
+
+  &__item {
+    display: flex;
+    &_img {
       width: 150px;
       height: 150px;
     }
+    &_flex {
+      margin-left: 20px;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      &_title {
+        font-size: 20px;
+        font-weight: 700;
+      }
+      &_description {
+        width: 230px;
+        font-size: 18px;
+      }
+      &_price {
+        font-size: 20px;
+        font-weight: 700;
+      }
+    }
   }
 }
-
 
 // ----------низ карточки----------------
 .extraContainer {
