corrected the layout and installed react-router

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -18,6 +18,9 @@
     &_active {
       background-color: var(--blue);
       color: var(--white);
+      &:hover {
+        background-color: var(--yellow-rich);
+      }
     }
   }
 }
