--- a/src/pages/ultimateReact/items/pizzaProject/styles.module.scss
+++ b/src/pages/ultimateReact/items/pizzaProject/styles.module.scss
@@ -44,7 +44,12 @@
     text-align: center;
 
     &_lastChild {
-      margin-top: 33px;
+      padding-top: 33px;
+      font-size: 30px;
+      font-weight: 600;
+      width: 1068px;
+      margin: auto;
+      text-align: center;
     }
   }
   button {
