--- a/src/components/UI/divider/styles.module.scss
+++ b/src/components/UI/divider/styles.module.scss
@@ -1,19 +1,18 @@
 @import '../../../assets/css/main.css';
 
-.stripe{
+.stripe {
   width: 100%;
   height: 2px;
   background-color: var(--blue-light);
   margin-bottom: 10px;
 
-  &__bottom{
+  &__bottom {
     width: 100%;
-  height: 2px;
-  background-color: var(--blue-light);
-  margin-top: 10px;
+    height: 2px;
+    background-color: var(--blue-light);
+    margin-top: 10px;
   }
-}
-
-p{
-  text-align: center;
+  &__title {
+    text-align: center;
+  }
 }
