--- a/src/pages/ultimateReact/items/pizzaProject/styles.module.scss
+++ b/src/pages/ultimateReact/items/pizzaProject/styles.module.scss
@@ -1,5 +1,5 @@
 @import '../../../../assets/css/main.css';
-
+// элемент готов
 .mainContainer {
   width: 1370px;
   height: 730px;
@@ -64,7 +64,7 @@
     transform: translate(-50%, 0);
   }
 
-  &__butGray{
+  &__butGray {
     min-width: 250px;
     height: 54px;
     margin-top: 33px;
@@ -89,6 +89,11 @@
   &__item {
     display: flex;
     &_img {
+      width: 150px;
+      height: 150px;
+    }
+    &_img_mod {
+      filter: grayscale(1);
       width: 150px;
       height: 150px;
     }
@@ -119,6 +124,15 @@
   height: 54px;
   background-color: var(--blue-light);
   border-radius: 0 0 14px 14px;
+  display: flex;
+  justify-content: space-between;
+  img {
+    margin-top: 18px;
+    margin-right: 20px;
+  }
+  img:last-child {
+    margin-top: 20px;
+  }
 
   p {
     color: var(--black);
