Working on the cardBottom element part 2

--- a/src/components/UI/cardBottom/styles.module.scss
+++ b/src/components/UI/cardBottom/styles.module.scss
@@ -1,8 +1,6 @@
 @import '../../../assets/css/main.css';
 
-
-
-.extraContainer {
+.cardBottom {
   height: 54px;
   background-color: var(--blue-light);
   border-radius: 0 0 14px 14px;
