Worked on the listOfThings component

--- a/src/pages/ultimateReact/items/listOfThings/styles.module.scss
+++ b/src/pages/ultimateReact/items/listOfThings/styles.module.scss
@@ -1,14 +1,7 @@
 @import '../../../../assets/css/main.css';
-// :root {
-//   --black: #393939;
-//   --white: #ffffff;
-//   --blue-light: #f3f6fd;
-//   --blue-medium: #b8b8ff;
-//   --blue: #5051f9;
-//   --yellow: #F2EFDD;
-//   --yellow-rich: #EABA4C;
-// }
+
 .mainContainer {
+  // text-decoration: line-through;
   width: 1370px;
   height: 730px;
   border-top: 2px solid var(--blue-light);
