Changed the layout of the components

--- a/src/pages/ultimateReact/items/containerOne/turnCards/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerOne/turnCards/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/css/main.css';
+@import '../../../../../assets/css/main.css';
 
   .mainContainer {
     border-top: 2px solid var(--blue-light);
