--- a/src/pages/ultimateReact/items/containerOne/pizzaProject/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerOne/pizzaProject/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/css/main.css';
+@import '../../../../../assets/css/main.css';
 // элемент готов
 .mainContainer {
   width: 1370px;
