--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,9 +1,13 @@
 @import '../../assets/css/main.css';
-
-.list {
+.flex{
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 54px;
   background-color: var(--blue-light);
+}
+.list {
+  
   display: flex;
  
   
