--- a/src/pages/ultimateReact/items/containerOne/listOfThings/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerOne/listOfThings/styles.module.scss
@@ -1,7 +1,6 @@
 @import '../../../../../assets/css/main.css';
 
 .mainContainer {
-  // text-decoration: line-through;
   width: 1370px;
   height: 730px;
   border-top: 2px solid var(--blue-light);
@@ -55,7 +54,7 @@
 }
 
 .main {
-  margin: 40px;
+  margin: 20px 40px;
   &__list {
     display: flex;
     gap: 20px;
@@ -83,7 +82,7 @@
   align-items: center;
   display: flex;
   position: absolute;
-  bottom: 10px;
+  bottom: 50px;
   left: 50%;
   transform: translate(-50%, -50%);
   button {
@@ -96,5 +95,15 @@
 
   &__sort {
     margin-right: 20px;
+  }
+
+  &__text{
+    background-color: var(--blue-light);
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    padding: 20px;
   }
 }
