--- a/src/pages/ultimateReact/items/containerOne/listOfThings/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerOne/listOfThings/styles.module.scss
@@ -12,7 +12,7 @@
 .header {
   display: flex;
   gap: 20px;
-  margin: 40px 0 0 40px;
+  margin: 20px 0 0 40px;
   text-align: center;
   &__text {
     padding-top: 17px;
@@ -52,14 +52,26 @@
     color: var(--white);
   }
 }
-
+.filler {
+  width: 807px;
+  height: 202px;
+  text-align: center;
+  background-color: var(--blue-light);
+  margin: 20px 0 0 40px;
+  border-radius: 14px;
+  p {
+    font-size: 24px;
+    font-weight: 700;
+    padding-top: 90px;
+  }
+}
 .main {
   margin: 20px 40px;
   &__list {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
-    input{
+    input {
       margin-left: 20px;
     }
     &_item {
@@ -93,9 +105,9 @@
     color: var(--white);
   }
 
-  select{
+  select {
     height: 54px;
-    padding-left: 20px ;
+    padding-left: 20px;
     border-radius: 14px;
     background-color: var(--blue-medium);
     color: var(--white);
@@ -107,13 +119,16 @@
     margin-right: 20px;
   }
 
-  &__text{
+  &__text {
     background-color: var(--blue-light);
-    width: 100%;
+    padding: 0 20px;
     height: 60px;
+    border-radius: 14px;
     position: absolute;
-    bottom: 0;
+    bottom: -22px;
     text-align: center;
     padding: 20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
