Created a separateAccount component

--- a/src/pages/ultimateReact/styles.module.scss
+++ b/src/pages/ultimateReact/styles.module.scss
@@ -8,6 +8,9 @@
   margin-left: 40px;
  
     // строка 3
+    &_eight{
+      grid-column: 5 / 9;
+    }
     &_seven {
       grid-column: 11 / 12;
     }
