--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -29,3 +29,20 @@
     }
   }
 }
+
+.bottom{
+  background-color: var(--blue-medium);
+  width: 100%;
+  height: 55px;
+}
+.help{
+  width: 60px;
+  cursor: pointer;
+  img{
+    padding: 18px 0 0 22px;
+    
+  }
+  &:hover {
+      background-color: var(--yellow-rich);
+    }
+}
