--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,5 +1,5 @@
 @import '../../assets/css/main.css';
-.flex{
+.flex {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -7,10 +7,8 @@
   background-color: var(--blue-light);
 }
 .list {
-  
   display: flex;
- 
-  
+
   &__item {
     padding: 17px 22px;
     cursor: pointer;
@@ -29,20 +27,41 @@
     }
   }
 }
-
-.bottom{
-  background-color: var(--blue-medium);
-  width: 100%;
-  height: 55px;
-}
-.help{
+.help {
   width: 60px;
   cursor: pointer;
-  img{
+
+  img {
     padding: 18px 0 0 22px;
-    
   }
   &:hover {
-      background-color: var(--yellow-rich);
-    }
+    background-color: var(--yellow-rich);
+  }
+}
+
+.bottom {
+  div {
+    margin: 10px 20px;
+    height: 40px;
+    width: 40px;
+    border-radius: 14px;
+  }
+  &__pet {
+    background-color: #acfffa;
+  }
+  &__ui {
+    background-color: #d8ffd4;
+  }
+  &__standard {
+    background-color: var(--blue-light);
+  }
+  &__interesting {
+    background-color: #ffebb8;
+  }
+  p {
+    margin-top: 18px;
+  }
+
+  display: flex;
+  width: 100%;
 }
