Developed the billCalculation component

--- a/src/pages/ultimateReact/items/containerOne/billCalculation/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerOne/billCalculation/styles.module.scss
@@ -1,10 +1,38 @@
 @import '../../../../../assets/css/main.css';
 
-  .mainContainer {
-    border-top: 2px solid var(--blue-light);
-    border-right: 2px solid var(--blue-light);
-    border-left: 2px solid var(--blue-light);
-    border-radius: 14px 14px 0 0;
-  }
-  
+.mainContainer {
+  border-top: 2px solid var(--blue-light);
+  border-right: 2px solid var(--blue-light);
+  border-left: 2px solid var(--blue-light);
+  border-radius: 14px 14px 0 0;
+}
 
+.calc {
+  text-align: center;
+
+  p {
+    margin: 10px;
+    color:var(--blue-medium);
+  }
+  &_input{
+    width: 259px;
+    height: 54px;
+    color: var(--blue-medium);
+    border-radius: 14px;
+    border: 2px solid var(--blue-medium);
+    padding: 0 20px;
+
+  }
+}
+
+.botton{
+  display: flex;
+  justify-content: space-between;
+
+  &_reset{
+    width: 54px;
+    height: 108px;
+    background-color: var(--blue-medium);
+ 
+  }
+}
