--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,3 +17,13 @@
   font-weight: 400;
   font-family: 'Comfortaa', sans-serif;
 }
+
+
+.mainContainer {
+  border-top: 2px solid var(--blue-light);
+  border-right: 2px solid var(--blue-light);
+  border-left: 2px solid var(--blue-light);
+  border-radius: 14px 14px 0 0;
+}
+
+
