--- a/src/pages/ultimateReact/items/containerTwo/cinema/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerTwo/cinema/styles.module.scss
@@ -1,1 +1,22 @@
 @import '../../../../../assets/css/main.css';
+.left{
+    margin: 20px 20px 0 20px;
+}
+//==============MovieItem==============
+.card{
+    width: 405px;
+    height: 100px;
+    display: flex;
+    margin-top: 20px;
+    img{
+        width: 68px;
+        height: 100px;
+    }
+    &_text{
+        margin-top: 18px;
+        margin-left: 20px;
+        &_title{
+            height: 48px;
+        }
+    }
+}
