Finished work for today

--- a/src/pages/ultimateReact/items/containerTwo/cinema/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerTwo/cinema/styles.module.scss
@@ -1,4 +1,13 @@
 @import '../../../../../assets/css/main.css';
+
+.mainContainer{
+    display: flex;
+    &_div{
+        height: 100%;
+        width: 2px;
+        background-color: rgb(187, 187, 187);
+    }
+}
 .left{
     margin: 20px 20px 0 20px;
 }
