--- a/src/pages/ultimateReact/items/containerTwo/cinema/styles.module.scss
+++ b/src/pages/ultimateReact/items/containerTwo/cinema/styles.module.scss
@@ -5,6 +5,21 @@
 }
 .left{
     margin: 20px 20px 0 20px;
+    position: relative;
+    &_close{
+        width: 26px;
+        height: 26px;
+        color: var(--white);
+        background-color: var(--blue-medium);
+        font-weight: 700;
+        z-index: 1;
+        border-radius: 14px;
+        padding: 2px 0 0 9px;
+        position: absolute;
+        bottom: 20px;
+        right: 0;
+        cursor: pointer;
+    }
 }
 //==============MovieItem==============
 .card{
