changed the UI separator element and corrected the UI page

--- a/src/pages/UIproject/styles.module.scss
+++ b/src/pages/UIproject/styles.module.scss
@@ -7,10 +7,10 @@
     margin-top: 40px;
     margin-left: 40px;
    
-      &_one {
-        grid-column: 1 / 7;
-      }
-      &_two {
-        grid-column: 7 / 8;
-      }
+      // &_one {
+      //   grid-column: 1 / 7;
+      // }
+      // &_two {
+      //   grid-column: 7 / 8;
+      // }
   }
