--- a/src/pages/ultimateReact/styles.module.scss
+++ b/src/pages/ultimateReact/styles.module.scss
@@ -19,25 +19,23 @@
   gap: 40px;
   margin: 40px 0 40px 40px;
 
-  // строка 2
-  &_ten {
+  // строка 1
+  &_one {
+    grid-column: 1 / 7;
+  }
+  &_two {
+    grid-column: 7 / 13;
+  }
+   // строка 2
+   &_three {
     grid-column: 1 / 3;
   }
-
-
-  &_eight {
-    grid-column: 5 / 9;
+  &_four {
+    grid-column: 3 / 5;
   }
   &_seven {
     grid-column: 11 / 12;
   }
-  // строка 1
-  &_three {
-    grid-column: 9 / 10;
-  }
 
-  &_five {
-    grid-column: 1 / 5;
-  }
 
 }
