Changed the tooltip to work with context

--- a/src/pages/technical/items/containerOne/workingWithStates/styles.module.scss
+++ b/src/pages/technical/items/containerOne/workingWithStates/styles.module.scss
@@ -1,13 +1,7 @@
 @import '../../../../../assets/css/main.css';
 
-.mainContainer {
-  border-top: 2px solid var(--blue-light);
-  border-right: 2px solid var(--blue-light);
-  border-left: 2px solid var(--blue-light);
-  border-radius: 14px 14px 0 0;
-}
-
 .counter {
+  margin-top: 160px;
   display: flex;
   div {
     width: 63px;
